<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nedaa.nedaa.mainPageOfLogin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="268dp"
        android:layout_height="41dp"
        android:text="@string/loginAs"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="173dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NewUser"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="240dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/responAuthority"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="314dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="153dp"
        android:layout_height="53dp"
        android:text="@string/oldUser"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="393dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="365dp"
        android:layout_height="138dp"
        app:srcCompat="@drawable/img"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="4dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/img1" />


</android.support.constraint.ConstraintLayout>
