<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nedaa.nedaa.userRegister">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="145dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="203dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="260dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="321dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:text="@string/fullName"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="145dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="99dp"
        android:layout_height="44dp"
        android:text="@string/phoneNum"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="265dp"
        tools:layout_editor_absoluteY="205dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="97dp"
        android:layout_height="39dp"
        android:text="@string/RUusername"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="267dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="94dp"
        android:layout_height="43dp"
        android:text="@string/RUpassword"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="264dp"
        tools:layout_editor_absoluteY="324dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="398dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="365dp"
        android:layout_height="134dp"
        app:srcCompat="@drawable/img"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="HardcodedText,MissingConstraints"
        android:contentDescription="@string/img2" />


</android.support.constraint.ConstraintLayout>
