<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nedaa.nedaa.Alogin">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="96dp"
        android:layout_height="39dp"
        android:text="@string/Ausername"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="226dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="94dp"
        android:layout_height="49dp"
        android:text="@string/Apassword"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="274dp"
        tools:layout_editor_absoluteY="287dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="226dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="287dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Alogin"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="376dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="366dp"
        android:layout_height="148dp"
        app:srcCompat="@drawable/img"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/img4" />
</android.support.constraint.ConstraintLayout>
