<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nedaa.nedaa.UAlogin">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="98dp"
        android:layout_height="47dp"
        android:text="@string/Uusername"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="232dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="95dp"
        android:layout_height="44dp"
        android:text="@string/Upassword"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="273dp"
        tools:layout_editor_absoluteY="304dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="232dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="304dp"
        tools:ignore="MissingConstraints" />



    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ulogin"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="393dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="379dp"
        android:layout_height="173dp"
        app:srcCompat="@drawable/img"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/img3" />
</android.support.constraint.ConstraintLayout>
